--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <title>Home Page - Segtrack</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-
-  <link rel="stylesheet" href="css/sytles.css">
+  <link rel="stylesheet" href="Public/css/sytles.css">
 
 </head>
 
@@ -18,7 +17,7 @@
     <div class="container">
       <a class="navbar-brand" href="#">
 
-        <img src="img/LOGO_SEGTRACK.ico" alt="Segtrack Logo">
+        <img src="Public/img/LOGO_SEGTRACK.ico" alt="Segtrack Logo">
 
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,8 +47,8 @@
           </li>
         </ul>
         <div class="d-flex">
-          <a href="../App/View/Login/login.php" class="btn btn-custom">Iniciar Sesión</a>
-          <a href="" class="btn btn-custom">Registrarse</a>
+          <a href="App/View/Login/login.php" class="btn btn-custom">Iniciar Sesión</a>
+          
 
         </div>
       </div>
